# disk-analyst-tui

./: .gitignore  README.md  pyproject.toml
disk_analyst_tool/: __init__.py  cli.py
disk_analyst_tool/core/: __init__.py  cleanup.py  disk.py  docker.py  models.py  packages.py
disk_analyst_tool/tui/: app.py  styles.tcss
disk_analyst_tool/tui/screens/: dashboard.py  disk.py  docker.py  packages.py
docs/plans/: 2026-03-29-tidymac-design.md  2026-03-29-tidymac-implementation.md
tests/: test_cleanup.py  test_disk.py  test_docker.py  test_models.py  test_outdated.py  test_packages.py
