[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disk-analyst-tui"
version = "0.1.0"
description = "TUI system manager for macOS — disk analysis, smart cleanup, and package management"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "niuton" },
]
keywords = ["tui", "disk", "cleanup", "macos", "system-manager", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80",
    "pydantic>=2.0",
    "psutil>=5.9",
    "humanize>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/niuton/disk-analyst-tui"
Repository = "https://github.com/niuton/disk-analyst-tui"
Issues = "https://github.com/niuton/disk-analyst-tui/issues"

[project.scripts]
disk-analyst = "disk_analyst_tool.cli:main"
